<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs213.rm1162_mjb523.photoapp.Search">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingHorizontal="3dp"
                    android:text="@string/tag_type"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/tagTypeRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checkedButton="@+id/personRadioButton"
                    android:onClick="changeAutoComplete"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/personRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="changeAutoComplete"
                        android:text="@string/person"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/locationRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="changeAutoComplete"
                        android:text="@string/location"
                        android:textSize="18sp" />
                </RadioGroup>

            </LinearLayout>

            <AutoCompleteTextView
                android:id="@+id/tagValueAutoText"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:hint="Tag Value" />

            <RadioGroup
                android:id="@+id/andOrRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:checkedButton="@+id/andRadioButton"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/andRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/and"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/orRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/or"
                    android:textSize="18sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addParameter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="add"
                    android:text="@string/addParameter" />

                <Button
                    android:id="@+id/deleteParameter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="delete"
                    android:text="@string/deleteParameter" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/search_parameters"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <GridView
            android:id="@+id/searchParametersGridView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="fill_horizontal"
            android:numColumns="2" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/goBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="goBack"
                android:text="@string/go_back"
                tools:text="@string/go_back" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:onClick="search"
                android:text="@string/search_activity"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>