<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs213.rm1162_mjb523.photoapp.PhotoList">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridView
            android:id="@+id/photoGridView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:stretchMode="columnWidth"
            android:numColumns="3"
            android:choiceMode="singleChoice"
            android:listSelector="@drawable/gridview_selector">

        </GridView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/displayButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="displayOnClick"
                android:text="@string/display_button"
                android:textSize="13sp" />

            <Button
                android:id="@+id/addPhotoButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="addPhotoOnClick"
                android:text="@string/add_photo_button"
                android:textSize="13sp" />

            <Button
                android:id="@+id/removePhotoButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="removePhotoOnClick"
                android:text="@string/remove_photo_button"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/movePhotoButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="moveOnClick"
                android:text="@string/move_photo_button" />

            <Button
                android:id="@+id/slideshowButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="slideshowOnClick"
                android:text="@string/slideshow_button"
                android:textSize="13sp" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>