<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs213.rm1162_mjb523.photoapp.DisplayPhoto">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/captionTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tagTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:fontFamily="sans-serif"
            android:text="@string/tag_text"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <GridView
            android:id="@+id/tagGridView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:numColumns="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.75"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addTagButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_tag_button"
                android:onClick="addTag"/>

            <Button
                android:id="@+id/deleteTagButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete_tag_button"
                android:onClick="deleteTag"/>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>